2012-03-06  Peter Bloomfield

	* libbalsa/libbalsa-gpgme-cb.c (lb_gpgme_passphrase): build
	with --disable-threads.

2012-02-08  Albrecht Dreß

	* libbalsa/gmime-part-rfc2440.c (g_mime_part_rfc2440_verify):
	check for empty return from GpgME.

2012-02-03  Peter Bloomfield

	* configure.in: remove obsolete BUILD_WITH_GNOME.

2011-12-20  Peter Bloomfield

	* configure.in: use git tag to set version.

2011-12-20  Peter Bloomfield

	* Makefile.am: drop GNOME_Balsa.server.in from balsa_extra_dist.

2011-12-20  Peter Bloomfield

	* .gitignore: add .libs.

2011-12-20  Albrecht Dreß

	* libbalsa/rfc3156.c: suppress GLib warning when the message is
	only encrypted; return 'no error' for encrypted-only RFC 2440
	messages; re-wrap a few over-long lines
	* src/balsa-message.c: properly pick up return values from
	libbalsa
	* src/balsa-mime-widget-crypto.[hc]: changes needed for drawing
	encrypted-only frame
	* src/balsa-mime-widget-multipart.c: use new crypto frame api
	* src/balsa-mime-widget.c: draw frame around encrypted-only rfc
	2440 part
	* src/print-gtk.c: encrypted-only frame print implementation

2011-12-18  Peter Bloomfield

	* src/main.c (balsa_check_open_mailboxes),
	(scan_mailboxes_idle_cb), (balsa_check_open_compose_window),
	(real_main), (handle_remote): reuse identical code.

2011-12-18  Peter Bloomfield

	* .cvsignore: delete.
	* .gitignore: add.

2011-12-17  Peter Bloomfield

	* src/main.c (handle_remote): do not leak option-handling
	resources.

2011-12-17  Peter Bloomfield

	* src/main-window.c: build --without-nm; thanks to Jack
	<URL:http://mail.gnome.org/archives/balsa-list/2011-December/msg00013.html>.

2011-12-17  Peter Bloomfield

	* src/main.c (handle_remote): use the capabilities of
	g_application_command_line_print.

2011-12-17  Peter Bloomfield

	* src/main.c (scan_mailboxes_idle_cb), (real_main),
	(handle_remote), (command_line_cb): free option-handling resources
	when no longer needed, instead of later; ignore other options