@@ -1,5 +1,10 @@
 2012-03-06  Peter Bloomfield
 
+	* src/main-window.c: check local mailboxes even when network is
+	not connected.
+
+2012-03-06  Peter Bloomfield
+
 	* libbalsa/libbalsa-gpgme-cb.c (lb_gpgme_passphrase): build
 	with --disable-threads.
 
